@@ -1,3 +1,7 @@
+2000-11-29  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Extended shapefile OGR driver to support MULTIPOLYGON objects.
+
 2000-11-27  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added Japanese DEM format (frmts/jdem).
